--- a/wineshare/src/main/resources/templates/about/aboutUs.html
+++ b/wineshare/src/main/resources/templates/about/aboutUs.html
@@ -52,7 +52,7 @@
           </div>
           <div class="col-lg-7 col-md-7">
             <div class="about-us-border">
-              <h1 class="heading-about"><a href="#">Wine Share is... </a></h1>
+              <h1 class="heading-about"><a href="#">Wineshare is... </a></h1>
               <p class="content-about">
                 와인의 세계로의 초대
 
