--- a/wineshare/src/main/resources/static/wineshare-css/marketing-list.css
+++ b/wineshare/src/main/resources/static/wineshare-css/marketing-list.css
@@ -63,9 +63,12 @@
 }
 
 .market-img{
-    width: 100%;
-    height:100%;
-
+    width:100%;
+    object-fit: cover;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    translate : -50% -50%;
 }
 
 .market-pro-post-content{
@@ -125,8 +128,8 @@
 
 .article-container{
     display: grid;
-    grid-template-columns: 45% 45%;
-    grid-template-rows:35% 35% 35%;
+    grid-template-columns: 35% 35%;
+    grid-template-rows: 35vh 35vh 35vh;
     gap:20px 20px;
     justify-content: center;
     margin-top:7%;
