--- a/wineshare/src/main/resources/templates/admin/dataList.html
+++ b/wineshare/src/main/resources/templates/admin/dataList.html
@@ -235,7 +235,7 @@
                 `);
             }
             // 다음 버튼
-            const nextDisabled = currentPage === totalPages - 1 ? 'disabled' : '';
+            const nextDisabled = (currentPage === totalPages -1 || totalPages === 0) ? 'disabled' : '';
             paginationContainer.append(`
                 <li class="next hvr-shutter-out-horizontal ${nextDisabled}">
                     <a ${nextDisabled ? '' : 'onclick="read(\'' + category + '\', ' + (currentPage + 1) + ')"'}  aria-label="Next">
