--- a/wineshare/src/main/resources/templates/member/memberAgree.html
+++ b/wineshare/src/main/resources/templates/member/memberAgree.html
@@ -117,8 +117,8 @@
                 1. 회사는 이용자의 회원가입 시 타인의 명의를 도용한 부정가입을 방지하기 위해 본인인증 서비스 사업자가 제공하는 인증방법을 통해 본인인증서비스를 제공 및
                 운영합니다.
                 2. 회사는 회원을 보호하기 위하여 보안 및 인증수단을 회사 보안 정책에 따라 시행 및 변경할 수 있습니다.
-                3. 회사는 회원의 발신번호 사전등록 및 본인 인증 절차를 거친 후 Wine Share 서비스를 제공하여야 합니다.
-                4. 본인 인증 서비스에 대한 동의 거부 시, 회원 가입이 불가하며, Wine Share 서비스를 이용할 수 없습니다.
+                3. 회사는 회원의 발신번호 사전등록 및 본인 인증 절차를 거친 후 Wineshare 서비스를 제공하여야 합니다.
+                4. 본인 인증 서비스에 대한 동의 거부 시, 회원 가입이 불가하며, Wineshare 서비스를 이용할 수 없습니다.
               </p>
               <p>
                 7조. 회원 등록정보의 이용
@@ -136,7 +136,7 @@
             <div class="txt_box" tabindex="0">
               <!-- tabindex="0" tab키로만 이동 가능 -->
               <p class="article_txt">
-              <p>본인은 Wine Share(이하 '회사'라 합니다.)가 제공하는 회원 서비스(이하 '서비스'라 합니다.)를 이용하기 위해, 다음과 같이 '회사'가 본인의 개인정보를 수집/이용하는
+              <p>본인은 Wineshare(이하 '회사'라 합니다.)가 제공하는 회원 서비스(이하 '서비스'라 합니다.)를 이용하기 위해, 다음과 같이 '회사'가 본인의 개인정보를 수집/이용하는
                 것에 동의합니다.
               </p>
               <p>
@@ -178,8 +178,8 @@
             <h2>프로모션 정보 수신동의 (선택)</h2>
             <div class="txt_box prmo_txt_without" style="height: 150px;">
               <p class="promo_txt">
-                Wine Share 에서 제공하는 이벤트/혜택 등 다양한 정보를 휴대전화(네이버앱 알림 또는 문자), 이메일로 받아보실 수 있습니다.
-                일부 서비스(별도 회원 체계로 운영하거나 Wine Share 가입 이후 추가 가입하여 이용하는 서비스 등)의 경우, 개별 서비스에 대해 별도 수신 동의를 받을 수 있으며,
+                Wineshare 에서 제공하는 이벤트/혜택 등 다양한 정보를 휴대전화(네이버앱 알림 또는 문자), 이메일로 받아보실 수 있습니다.
+                일부 서비스(별도 회원 체계로 운영하거나 Wineshare 가입 이후 추가 가입하여 이용하는 서비스 등)의 경우, 개별 서비스에 대해 별도 수신 동의를 받을 수 있으며,
                 이때에도 수신 동의에 대해 별도로 안내하고 동의를 받습니다.
               </p>
             </div>
