--- a/wineshare/src/main/resources/templates/wine/wineList.html
+++ b/wineshare/src/main/resources/templates/wine/wineList.html
@@ -144,7 +144,7 @@
             }
 
             // 다음 버튼
-            const nextDisabled = currentPage === totalPages - 1 ? 'disabled' : '';
+            const nextDisabled = (currentPage === totalPages -1 || totalPages === 0) ? 'disabled' : '';
             paginationContainer.append(`
         <li class="next hvr-shutter-out-horizontal ${nextDisabled}">
             <a ${nextDisabled ? '' : 'onclick="page(' + (currentPage + 1) + ')"'} aria-label="Next">
