--- a/wineshare/src/main/resources/static/wineshare-css/marketing-list.css
+++ b/wineshare/src/main/resources/static/wineshare-css/marketing-list.css
@@ -73,52 +73,52 @@
 
 .market-pro-post-content{
     font-size:15px;
-    color:#c02323;
+    color:#c02323 !important;
     height:28px;
     overflow:hidden;
-    border: 1px solid #000000;
     width:45%;
     position:absolute;
-    top:10%;
-    right:0px;
+    top:15%;
+    right:0;
     border-style:none;
 }
 
 .market-post-title{
     font-size:30px;
-    border: 1px solid #000000;
+    line-height: 30px;
     font-weight:bold;
     width:45%;
     position:absolute;
     top:23%;
-    right:0px;
+    right:0;
     border-style:none;
 }
 
 .market-post-name{
-    border: 1px solid #000000;
+
     color:#a6a6a6;
+    opacity: 0.5;
     width:45%;
     position:absolute;
-    top:35%;
-    right:0px;
+    top: 43%;
+    right:0;
     border-style:none;
 }
 
 .market-post-content{
-    border: 1px solid #000000;
-    height:85px;
+    height:100px;
     width:45%;
-    overflow:hidden;
+    overflow: hidden;
+    white-space: pre-wrap;
     position:absolute;
     top:50%;
-    right:0px;
+    right:0;
     border-style:none;
 }
 
 
 .post-submit{
-    border: 1px solid #000000;
+
     position:absolute;
     bottom:5%;
     right:5%;
