--- a/wineshare/src/main/resources/templates/board/boardForm.html
+++ b/wineshare/src/main/resources/templates/board/boardForm.html
@@ -116,7 +116,7 @@
 
                                     <div class="form-group">
                                         <label th:for="boardContent">내용</label>
-                                        <textarea th:field="*{boardContent}" cols="95%" rows="5"
+                                        <textarea th:field="*{boardContent}" cols="95" rows="20"
                                                   class="form-control"></textarea>
                                         <p th:if="${#fields.hasErrors('boardContent')}" th:errors="*{boardContent}"
                                            class="fieldError">Incorrect data</p>
